--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+# requirements.txt
 streamlit==1.32.2
 pandas==2.2.1
 numpy==1.26.4
 joblib==1.3.2
 scikit-learn==1.4.2
-openpyxl==3.1.2
-python-dateutil==2.9.0  # Ajouté pour gérer les dates
+matplotlib==3.8.4
+python-dotenv==1.0.1  # For email credentials
