--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-# requirements.txt
 streamlit==1.32.2
 pandas==2.2.1
-numpy==1.26.4
-joblib==1.3.2
 scikit-learn==1.4.2
-matplotlib==3.8.4
-python-dotenv==1.0.1  # For email credentials
+numpy==1.26.4
+scipy>=1.6.0
+cython>=3.0.8
