--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
-streamlit==1.32.2
-pandas==2.2.1
-scikit-learn==1.4.2
-numpy==1.26.4
-scipy>=1.6.0
-cython>=3.0.8
+# Exécution
+pandas==1.5.3
+numpy==1.24.3
+scikit-learn==1.2.2
+joblib==1.2.0
+pefile==2023.2.7
+pillow==9.5.0
+tk==0.1.0
+tqdm==4.65.0
+
+# Entraînement (décommenter si besoin)
+# lightgbm==3.3.5
+# matplotlib==3.7.1
+# python-magic==0.4.27
